# genanki

./: .gitignore  pyproject.toml
genanki/: __init__.py  apkg_col.py  apkg_schema.py  builtin_models.py  card.py  collection.py  deck.py  model.py  note.py  package.py  util.py
tests/: collection.conf.json  collection.dconf.json  collection.decks.json  collection.models.json  db_types.py  test_attrs.py  test_builtin_models.py  test_cloze.py  test_genanki.py  test_model.py  test_native.py  test_note.py
